--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         </div>
         <hr>
 
+            <div class="container">
             <div class="text item"> 
                 <p> I create all sorts of stuff! I'm best w/ web apps, clear & darkweb. <br> Online stores, blogs, chatrooms ... <br> All legal! (allegedly)
                     <br> <br> I can also build fullstack (prob) & design games (unity or c++).
@@ -48,8 +49,7 @@
                     <br> <br> lmk if u want anything
                 </p>
             </div>
-
-        <hr>
+        </div>
     </body>
 
 </html>
