--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class=container>
             <canvas id = canvas class=item></canvas>
             <div class="text item"> 
-                <h2> I build <s> shit </s> stuff!</h2>
+                <h2> I build stuff!</h2>
             </div>
         </div>
         <script src="dots.js"> </script>
